--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,101 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: 'yg-jalnan';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.2/JalnanOTF00.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+*{margin: 0; padding: 0; box-sizing: border-box;}
+li{
+    list-style: none;
+}
+a{
+    text-decoration: none; color: inherit;
+}
+body{
+    font-family: 'yg-jalnan';
+    font-size: 16px;
+    line-height: 1.6;
+    color: #222;
+}
+input,section,textarea{
+    outline: none;
+}
+table{
+    border-collapse: collapse;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#header{
+  height: 64px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.inner{
+      width: 1200px;
+      margin: 0 auto;
+    }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#header .inner{
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#header ul{
+          display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#header li{
+  padding: 0 24px;
+}
+
+#footer{
+  padding-top: 50px;
+  
+}
+
+#footer-info{
+  border-top: 3px solid #333;
+  border-bottom: 1px solid #333;
+  padding-bottom: 30px;
+}
+
+#footer-info >div{
+  display: flex;
+  justify-content: space-between;
+}
+
+#footer-info >div div{
+  width: 32%;
+  line-height: 2;
+}
+
+#footer-info >div div h3{
+  border-bottom: 1px solid #ccc;
+  padding-top:20px ;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+#footer-info >div div li{
+  border-bottom: 1px dotted #ccc;
+}
+
+#copyright{
+  background: #eee;
+  padding: 30px;
+  border-top: 1px solid #ccc;
+}
+
+#footer-copy ul{
+  display: flex;
+  padding: 20px 0;
+}
+
+#footer-copy ul li{
+  padding: 0 30px;
+  line-height: 1;
+  
+}
+
+#footer-copy ul li:not(:last-child){
+  border-right: 1px solid #ccc;
 }
