--- a/src/main/index.scss
+++ b/src/main/index.scss
@@ -24,7 +24,7 @@
             border-radius: 16px;
             margin-bottom: 16px;
             overflow: hidden;
-            &:not:nth-child(4n+0){
+            &:not(:nth-child(4n+0)){
                 margin-right: 1.3333%;
             }
             .product-contents{
